--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
         <i class="fa fa-hospital-o" style="font-size:48px;color:#2471a3"></i>
         <h3>Billing</h3>
       </div>
-    </div>
-
-    <!-- Separate Section (Centered Tile) -->
-    <div id="patient-details-tile">
-      <div class="tile patient-details-tile" onclick="showSection('reports')">
+	    <div class="tile" onclick="showSection('reports')">
         <i class="fa fa-wheelchair" style="font-size:48px;color:#2471a3"></i>
         <h3>Patient Details</h3>
-      </div>
+      </div> 
     </div>
+
+ 
   </div>
 
 
