--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
 	
 </div>
 
-
+<footer>
+        <p>Powered by NEXOVA. 2023</p>
+</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="script.js"></script>
 	
